Touch up CSS and fix spacing

--- a/app/javascript/styles/components/event.sass
+++ b/app/javascript/styles/components/event.sass
@@ -18,6 +18,9 @@
 .event-title_show-page
   padding: 25px
 
+.new-location-div
+  margin-bottom: 95px
+
 .margin-auto
   margin: auto
 
